test/compile_errors/err_c_import_str_to_c_char_requires_contract.w
//! expect-error: wrong argument type

use c_import("unsigned long strlen(const char *s);\n")

fn main:
    let s = f"abc{1}"
    let _ = unsafe { strlen(s) }
